# hangman

./: .gitignore  Dockerfile  LICENSE  README.md  cabal.config  hangman.cabal
app/: Main.hs
src/: Hangman.hs
src/Hangman/: Gallows.hs  IO.hs  Player.hs
test/: HangmanSpec.hs  HangmanTests.hs  Main.hs
test/Hangman/: GallowsTests.hs  PlayerTests.hs  Tests.hs
