name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rikmeijer/hangman#readme
license:             MIT
license-file:        LICENSE
author:              Rik Meijer
maintainer:          rik@pulledbits.org
copyright:           2018 Rik Meijer
category:            Games
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hangman
  other-modules:       Hangman.IO
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hangman
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangman
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rikmeijer/hangman
